--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   flutter_staggered_grid_view: ^0.4.1
   http: ^0.13.4
   fluttertoast: ^8.0.8
+  path: ^1.8.0
+  path_provider: ^2.0.8
+  wallpaper_manager_flutter: ^0.0.2
+  flutter_cache_manager: ^3.1.2
 
 dev_dependencies:
   flutter_test:
